...
                        Text("Error: \(error)")
                            .foregroundColor(.red)
                            .padding()
                    } else {
                        if geometry.size.width > geometry.size.height {
                            HStack(alignment: .top, spacing: 20) {
                                ModeratorImageView(url: viewModel.moderatorImageURL)
                                FeedbackForm(viewModel: viewModel)
                            }
                            .padding()
                            .accessibilityIdentifier("ModeratorImageView")
                        } else {
                            VStack(alignment: .center, spacing: 20) {
...
            }
            
            // Submit button
            Button(action: {
                viewModel.submitFeedback()
            }) {
                Text("Senden")
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color("NJoyGreen"))
                    .foregroundColor(.white)
                    .cornerRadius(8)
                    .accessibilityIdentifier("Senden")
...
