...
            
            VStack(alignment: .leading) {
                // Display song title with different styles for the current song
                Text(song.title)
                    .font(isCurrent ? .headline : .subheadline)
                    .fontWeight(isCurrent ? .bold : .regular)
                    .accessibilityIdentifier("SongTitleLabel")
                // Display song artist
                Text(song.interpret)
                    .font(.subheadline)
                    .foregroundColor(.gray)
                    .accessibilityIdentifier("SongArtistLabel")
            }
            Spacer()
        }
        .padding()
        // Highlight the background for the currently playing song
        .background(isCurrent ? Color("NJoyGreen").opacity(0.5) : Color.clear)
...
